--- a/MVC/.classpath
+++ b/MVC/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/talqwe/git/Maze3d/my_algorithms.31.08.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
